tests/conformance/syntax/negative/import_alias_missing_name.ditt
module Syntax.ImportAliasBad where

import Std.Category as
postulate C : Cat
id (x : C) : C = x
